--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "requirejs": "~2.1.10",
     "requirejs-text": "~2.0.10",
     "modernizr": "~2.7.1",
-    "tabletop": "~1.3.5"
+    "tabletop": "~1.3.5",
+    "backbone.localStorage": "~1.1.7"
   },
   "devDependencies": {}
 }
