--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,10 @@
     "requirejs-text": "~2.0.10",
     "modernizr": "~2.7.1",
     "tabletop": "~1.3.5",
-    "backbone.localStorage": "~1.1.7"
+    "backbone.localStorage": "~1.1.7",
+    "firebase": "~1.0.17",
+    "firebase-simple-login": "~1.5.0",
+    "backfire": "~0.3.0"
   },
   "devDependencies": {}
 }
