--- a/bower.json
+++ b/bower.json
@@ -2,16 +2,17 @@
   "name": "bikeoperandi",
   "version": "0.0.0",
   "dependencies": {
-    "sass-bootstrap": "~3.0.2",
-    "jquery": "~2.1.0",
-    "underscore": "~1.6.0",
     "backbone": "~1.1.0",
-    "requirejs": "~2.1.10",
-    "requirejs-text": "~2.0.10",
-    "modernizr": "~2.7.1",
+    "backfire": "~0.3.0",
     "firebase": "~1.0.17",
     "firebase-simple-login": "~1.5.0",
-    "backfire": "~0.3.0"
+    "jquery": "~2.1.0",
+    "marionette": "~1.8.7",
+    "modernizr": "~2.7.1",
+    "requirejs": "~2.1.10",
+    "requirejs-text": "~2.0.10",
+    "sass-bootstrap": "~3.0.2",
+    "underscore": "~1.6.0"
   },
   "devDependencies": {}
 }
