--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "requirejs": "~2.1.10",
     "requirejs-text": "~2.0.10",
     "sass-bootstrap": "~3.0.2",
-    "underscore": "~1.6.0"
+    "underscore": "~1.6.0",
+    "isotope": "~2.0.0"
   },
   "devDependencies": {}
 }
