--- a/bower.json
+++ b/bower.json
@@ -6,14 +6,15 @@
     "backfire": "~0.3.0",
     "firebase": "~1.0.17",
     "firebase-simple-login": "~1.5.0",
+    "imagesloaded": "~3.1.8",
+    "isotope": "~2.0.0",
     "jquery": "~2.1.0",
     "marionette": "~1.8.7",
     "modernizr": "~2.7.1",
     "requirejs": "~2.1.10",
     "requirejs-text": "~2.0.10",
     "sass-bootstrap": "~3.0.2",
-    "underscore": "~1.6.0",
-    "isotope": "~2.0.0"
+    "underscore": "~1.6.0"
   },
   "devDependencies": {}
 }
